--- a/Gmail/m_GMAIL.ditamap
+++ b/Gmail/m_GMAIL.ditamap
@@ -5,4 +5,5 @@
     <topicref href="SOURCE/c_introduction.dita"/>
     <topicref href="SOURCE/t_account_creation.dita"/>
     <topicref href="SOURCE/t_compose_an_email.dita"/>
+    <topicref href="SOURCE/t_5thfile.dita"/>
 </map>
