TW123: Added new topic in Gmail

--- a/Gmail/m_GMAIL.ditamap
+++ b/Gmail/m_GMAIL.ditamap
@@ -6,4 +6,5 @@
     <topicref href="SOURCE/t_account_creation.dita"/>
     <topicref href="SOURCE/t_compose_an_email.dita"/>
     <topicref href="SOURCE/t_5thfile.dita"/>
+    <topicref href="SOURCE/t_6th_topic.dita"/>
 </map>
