--- a/Whatsapp/t_installation.dita
+++ b/Whatsapp/t_installation.dita
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA Task//EN" "task.dtd">
 <task id="t_installation">
-    <title>Installation</title>
-    <shortdesc></shortdesc>
+    <title>Installation Android</title>
+    <shortdesc>This topic describes how to install whatsapp on andriod device.</shortdesc>
     <taskbody>
         <context>
             <p></p>
         </context>
         <steps>
             <step>
-                <cmd></cmd>
+                <cmd>Open  Play Store.</cmd>
+            </step>
+            <step>
+                <cmd>Search WhatsApp in the search box.</cmd>
+            </step>
+            <step>
+                <cmd>Tap <uicontrol>Install</uicontrol>.</cmd>
             </step>
         </steps>
     </taskbody>
