--- a/Whatsapp/m_whatsapp.ditamap
+++ b/Whatsapp/m_whatsapp.ditamap
@@ -7,4 +7,5 @@
     <topicref href="t_installation_ios.dita" platform="IOS"/>
     <topicref href="t_Account_Creation.dita"/>
     <topicref href="t_Terms_and_Privacy_Policy.dita"/>
+    <topicref href="c_video_call.dita"/>
 </map>
