TW12345: added new feature

--- a/product - c/t_task_of_product.dita
+++ b/product - c/t_task_of_product.dita
@@ -4,9 +4,7 @@
     <title>Task of product</title>
     <shortdesc></shortdesc>
     <taskbody>
-        <context>
-            <p></p>
-        </context>
+        <context>This topic describes about product c.<p/></context>
         <steps>
             <step>
                 <cmd></cmd>
