--- a/product - c/t_task_of_product.dita
+++ b/product - c/t_task_of_product.dita
@@ -7,7 +7,7 @@
         <context>This topic describes about product c.<p/></context>
         <steps>
             <step>
-                <cmd></cmd>
+                <cmd>Open playstore.</cmd>
             </step>
         </steps>
     </taskbody>
