--- a/Whatsapp/t_account_creation.dita
+++ b/Whatsapp/t_account_creation.dita
@@ -10,6 +10,9 @@
         <steps>
             <step>
                 <cmd>Yes</cmd>
+                <info>
+                    <note id="note_fth_bk2_vyb"/>
+                </info>
             </step>
         </steps>
     </taskbody>
