added a short desc

--- a/Whatsapp/t_account_creation.dita
+++ b/Whatsapp/t_account_creation.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA Task//EN" "task.dtd">
 <task id="t_account_creation">
     <title>Account Creation</title>
-    <shortdesc></shortdesc>
+    <shortdesc>This is a sample description</shortdesc>
     <taskbody>
         <context>
             <p></p>
