TW40: Added whatsapp documentation

--- a/Whatsapp/t_account_creation.dita
+++ b/Whatsapp/t_account_creation.dita
@@ -11,6 +11,9 @@
             <step>
                 <cmd>Yes</cmd>
             </step>
+            <step>
+                <cmd>Tap install.</cmd>
+            </step>
         </steps>
     </taskbody>
 </task>
