--- a/Whatsapp/m_whatsapp.ditamap
+++ b/Whatsapp/m_whatsapp.ditamap
@@ -5,4 +5,5 @@
     <topicref href="t_installation.dita"/>
     <topicref href="t_account_creation.dita"/>
     <topicref href="t_context.dita"/>
+    <topicref href="t_context3.dita"/>
 </map>
