tw40: added some topics

--- a/Whatsapp/m_whatsapp.ditamap
+++ b/Whatsapp/m_whatsapp.ditamap
@@ -6,4 +6,5 @@
     <topicref href="t_account_creation.dita"/>
     <topicref href="t_context.dita"/>
     <topicref href="t_context3.dita"/>
+    <topicref href="t_video_call.dita"/>
 </map>
