--- a/Product A/m_product_a.ditamap
+++ b/Product A/m_product_a.ditamap
@@ -2,4 +2,6 @@
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map>
     <title>Product A</title>
+    <topicref href="c_concept_a.dita"/>
+    <topicref href="t_task_a.dita"/>
 </map>
