--- a/product d/m_product_d.ditamap
+++ b/product d/m_product_d.ditamap
@@ -2,4 +2,5 @@
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map>
     <title>Product D</title>
+    <topicref href="untitled1.dita"/>
 </map>
