--- a/Whatsapp/t_account_creation.dita
+++ b/Whatsapp/t_account_creation.dita
@@ -14,6 +14,12 @@
             <step>
                 <cmd>Tap install.</cmd>
             </step>
+            <step>
+                <cmd/>
+                <info>
+                    <fig id="fig_ibl_xrm_xyb"/>
+                </info>
+            </step>
         </steps>
     </taskbody>
 </task>
