TW-48: Added new topic

--- a/Gmail/m_GMAIL.ditamap
+++ b/Gmail/m_GMAIL.ditamap
@@ -7,4 +7,5 @@
     <topicref href="SOURCE/t_compose_an_email.dita"/>
     <topicref href="SOURCE/t_5thfile.dita"/>
     <topicref href="SOURCE/t_6th_topic.dita"/>
+    <topicref href="SOURCE/t_google_drive.dita"/>
 </map>
