--- a/chrome/m_chrome.ditamap
+++ b/chrome/m_chrome.ditamap
@@ -2,4 +2,5 @@
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map>
     <title>chrome</title>
+    <topicref href="c_introduction.dita"/>
 </map>
