--- a/chrome/m_chrome.ditamap
+++ b/chrome/m_chrome.ditamap
@@ -5,4 +5,5 @@
     <topicref href="c_introduction.dita">
         <topicref href="t_topics.dita"/>
     </topicref>
+    <topicref href="t_test_12.dita"/>
 </map>
