--- a/Whatsapp/m_whatsapp.ditamap
+++ b/Whatsapp/m_whatsapp.ditamap
@@ -4,7 +4,8 @@
     <title>Whatsapp</title>
     <topicref href="t_installation.dita" product="Basic"/>
     <topicref href="t_account_creation.dita" product="Standard"/>
-    <topicref href="t_context.dita" product="Standard"/>
+    <topicref href="t_context.dita" product="product1"/>
     <topicref href="t_context3.dita"/>
-    <topicref href="t_video_call.dita"/>
+    <topicref href="t_video_call.dita" product="product1"/>
+    <topicref href="../t_Whatsapp/upi.dita"/>
 </map>
