TW-54 Added new topic Account Creation

--- a/Product A/m_product_a.ditamap
+++ b/Product A/m_product_a.ditamap
@@ -5,4 +5,5 @@
     <topicref href="c_concept_a.dita"/>
     <topicref href="t_task_a.dita"/>
     <topicref href="c_introduction.dita"/>
+    <topicref href="t_account_creation.dita"/>
 </map>
