TW-47: added account creation topic

--- a/project_c.ditamap
+++ b/project_c.ditamap
@@ -3,4 +3,5 @@
 <map>
     <title>project c</title>
     <topicref href="c_introduction.dita"/>
+    <topicref href="t_account_creation.dita"/>
 </map>
