tw:46-upadated on cash withdrawl

--- a/sandeep/t_cash_withdrawl.dita
+++ b/sandeep/t_cash_withdrawl.dita
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA Task//EN" "task.dtd">
-<task id="t_cash_withdrawl">
+<task>
     <title>Cash Withdrawl</title>
-    <shortdesc></shortdesc>
+    <shortdesc> this topic is describe to tell about transactions.</shortdesc>
     <taskbody>
         <context>
-            <p></p>
+            <p/>
         </context>
         <steps>
             <step>
-                <cmd></cmd>
+                <cmd/>
             </step>
         </steps>
     </taskbody>
