--- a/Facebook/t_installation.dita
+++ b/Facebook/t_installation.dita
@@ -11,6 +11,15 @@
             <step>
                 <cmd></cmd>
             </step>
+            <step>
+                <note id="note_ecz_zt4_dbc">
+                    <fig id="fig_eln_154_dbc">
+                        <image
+                            href="../../../Source/ATM/WhatsApp%20Image%202023-11-06%20at%2011.43.52_2c85d4ef.jpg"
+                            id="image_hkr_b54_dbc" scale="30"/>
+                    </fig>
+                </note>
+            </step>
         </steps>
     </taskbody>
 </task>
