--- a/insta/m_insta.ditamap
+++ b/insta/m_insta.ditamap
@@ -3,6 +3,6 @@
 <map>
     <title>insta</title>
     <topicref href="c_intro.dita"/>
-    <topicref href="t_installation.dita"/>
+    <topicref href="t_installation.dita" product="product1"/>
     <topicref href="t_account_creation.dita"/>
 </map>
