--- a/Twitter/m_twitter.ditamap
+++ b/Twitter/m_twitter.ditamap
@@ -5,4 +5,5 @@
     <topicref href="c_twitter_introduction.dita"/>
     <topicref href="account_creation.dita"/>
     <topicref href="t_how_to_tweet.dita"/>
+    <topicref href="t_delete_post.dita"/>
 </map>
