--- a/atm/m_atm.ditamap
+++ b/atm/m_atm.ditamap
@@ -5,4 +5,5 @@
     <topicref href="c_introductiom.dita"/>
     <topicref href="t_withcard.dita"/>
     <topicref href="t_without_card.dita"/>
+    <topicref href="t_cashdeposit.dita"/>
 </map>
