--- a/GMAIL/m_gmail.ditamap
+++ b/GMAIL/m_gmail.ditamap
@@ -5,4 +5,5 @@
     <topicref href="c_introduction.dita"/>
     <topicref href="t_account_creation.dita" product="product1"/>
     <topicref href="t_send_mail.dita" product="product2"/>
+    <topicref href="t_sowjanya_google_meet.dita"/>
 </map>
