--- a/insta/m_insta.ditamap
+++ b/insta/m_insta.ditamap
@@ -5,4 +5,5 @@
     <topicref href="c_intro.dita"/>
     <topicref href="t_installation.dita" product="product1"/>
     <topicref href="t_account_creation.dita"/>
+    <topicref href="t_deleteaccount.dita"/>
 </map>
