--- a/Facebook/m_facebook.ditamap
+++ b/Facebook/m_facebook.ditamap
@@ -8,4 +8,5 @@
     <topicref href="delete.dita">
         <topicref href="t_new.dita"/>
     </topicref>
+    <topicref href="t_add_a_post.dita"/>
 </map>
