--- a/Passport/c_introduction.dita
+++ b/Passport/c_introduction.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
 <concept id="c_introduction">
     <title>Introduction</title>
-    <shortdesc> This topic describe about passport.</shortdesc>
+    <shortdesc> This topic describes about passport.</shortdesc>
     <conbody>
         <p>A passport is an official government-issued document that serves as a form of
             identification and travel document for individuals who wish to travel internationally.
