--- a/Passport/m_applying_passport.ditamap
+++ b/Passport/m_applying_passport.ditamap
@@ -4,4 +4,5 @@
     <title>Passport</title>
     <topicref href="c_introduction.dita"/>
     <topicref href="t_applying_passport.dita"/>
+    <topicref href="t_renualpassport.dita"/>
 </map>
