--- a/atm/m_atm.ditamap
+++ b/atm/m_atm.ditamap
@@ -6,4 +6,5 @@
     <topicref href="t_withcard.dita"/>
     <topicref href="t_without_card.dita"/>
     <topicref href="t_cashdeposit.dita"/>
+    <topicref href="t_howtoaddastatus.dita"/>
 </map>
