--- a/GMAIL/m_gmail.ditamap
+++ b/GMAIL/m_gmail.ditamap
@@ -6,4 +6,5 @@
     <topicref href="t_account_creation.dita" product="product1"/>
     <topicref href="t_send_mail.dita" product="product2"/>
     <topicref href="t_sowjanya_google_meet.dita"/>
+    <topicref href="t_mohan_google_meet.dita"/>
 </map>
