--- a/GMAIL/m_gmail.ditamap
+++ b/GMAIL/m_gmail.ditamap
@@ -7,4 +7,5 @@
     <topicref href="t_send_mail.dita" product="product2"/>
     <topicref href="t_sowjanya_google_meet.dita"/>
     <topicref href="t_mohan_google_meet.dita"/>
+    <topicref href="t_aditya_google_meet.dita"/>
 </map>
