--- a/GMAIL/c_introduction.dita
+++ b/GMAIL/c_introduction.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
 <concept id="c_introduction">
     <title>Introduction</title>
-    <shortdesc></shortdesc>
+    <shortdesc>This topic describes about gmail.</shortdesc>
     <conbody>
         <p>GMAIL is an email service provided by google.  It also provides a web mail interface,
             accessible through a web browser, and is also accessible through the official mobile
