--- a/GMAIL/m_gmail.ditamap
+++ b/GMAIL/m_gmail.ditamap
@@ -8,5 +8,6 @@
     <topicref href="t_sowjanya_google_meet.dita"/>
     <topicref href="t_mohan_google_meet.dita"/>
     <topicref href="t_aditya_google_meet.dita"/>
+    <topicref href="t_ravi_google_meet.dita"/>
     <topicref href="c_sample.dita"/>
 </map>
