--- a/gmail_phani/m_gmail.ditamap
+++ b/gmail_phani/m_gmail.ditamap
@@ -4,4 +4,5 @@
     <title>Gmail</title>
     <topicref href="c_introduction.dita"/>
     <topicref href="t_account_creation.dita"/>
+    <topicref href="t_compose_email.dita"/>
 </map>
