--- a/Goutam Google account/t_compose_mail.dita
+++ b/Goutam Google account/t_compose_mail.dita
@@ -1,30 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA Task//EN" "task.dtd">
 <task id="t_compose_mail">
-    <title>Compose Mail</title>
-    <shortdesc/>
+    <title>Compose Email</title>
+    <shortdesc>This topic describe about Compose Email.</shortdesc>
     <taskbody>
         <steps id="steps_gcm_tys_wbc">
             <step>
-                <cmd/>
+                <cmd>Open Gmail.</cmd>
             </step>
             <step>
-                <cmd/>
+                <cmd>Click <uicontrol>Compose</uicontrol>.</cmd>
             </step>
             <step>
-                <cmd/>
+                <cmd>Enter the recipients Email address.</cmd>
+                <info>
+                    <note id="note_sqt_hnb_xbc">If required, Cc and Bcc Email address can be
+                        added.</note>
+                </info>
             </step>
             <step>
-                <cmd/>
+                <cmd>Add subject of Email.</cmd>
             </step>
             <step>
-                <cmd/>
+                <cmd>Enter the body of  Email bellow subject box .</cmd>
             </step>
             <step>
-                <cmd/>
+                <cmd>If required add attachments click the bellow relevant icon.</cmd>
             </step>
             <step>
-                <cmd/>
+                <cmd>Click <uicontrol>Send</uicontrol>.</cmd>
             </step>
         </steps>
     </taskbody>
