TW123456:new  file added

--- a/GMAIL/email.ditamap
+++ b/GMAIL/email.ditamap
@@ -4,5 +4,6 @@
     <title>email</title>
     <topicref href="c_jitendratext.dita"/>
     <topicref href="t_test007.dita"/>
+    <topicref href="r_ganesh.dita"/>
     <topicref href="t_jjgmail.dita"/>
 </map>
