--- a/Facebook/m_facebook.ditamap
+++ b/Facebook/m_facebook.ditamap
@@ -4,6 +4,7 @@
     <title>Facebook</title>
     <topicref href="c_introduction.dita"/>
     <topicref href="t_test4.dita"/>
+    <topicref href="test5.dita"/>
     <topicref href="t_account_creation.dita"/>
     <topicref href="t_installation.dita"/>
     <topicref href="delete.dita">
