TW 114: Added a new topic

--- a/GMAIL/m_gmail.ditamap
+++ b/GMAIL/m_gmail.ditamap
@@ -11,4 +11,5 @@
     <topicref href="t_aditya_google_meet.dita"/>
     <topicref href="t_ravi_google_meet.dita"/>
     <topicref href="c_sample.dita"/>
+    <topicref href="t_test6.dita"/>
 </map>
