writen about snap

--- a/Snap/c_introduction.dita
+++ b/Snap/c_introduction.dita
@@ -4,6 +4,6 @@
     <title>Introduction</title>
     <shortdesc></shortdesc>
     <conbody>
-        <p></p>
+        <p>about snapchat</p>
     </conbody>
 </concept>
