--- a/Snap/c_introduction.dita
+++ b/Snap/c_introduction.dita
@@ -5,5 +5,6 @@
     <shortdesc></shortdesc>
     <conbody>
         <p>about snapchat</p>
+        <p>details number</p>
     </conbody>
 </concept>
