--- a/GMAIL/m_gmail.ditamap
+++ b/GMAIL/m_gmail.ditamap
@@ -3,6 +3,7 @@
 <map>
     <title>EMAIL</title>
     <topicref href="c_introduction.dita"/>
+    <topicref href="t_meetings.dita"/>
     <topicref href="t_test3.dita"/>
     <topicref href="t_account_creation.dita" product="product1"/>
     <topicref href="t_send_mail.dita" product="product2"/>
