--- a/Goutam Telegram/m_telegram.ditamap
+++ b/Goutam Telegram/m_telegram.ditamap
@@ -5,4 +5,5 @@
     <topicref href="c_introduction.dita"/>
     <topicref href="t_installation.dita"/>
     <topicref href="t_account_creation.dita"/>
+    <topicref href="t_media.dita"/>
 </map>
