--- a/Passport/m_applying_passport.ditamap
+++ b/Passport/m_applying_passport.ditamap
@@ -5,4 +5,5 @@
     <topicref href="c_introduction.dita"/>
     <topicref href="t_applying_passport.dita"/>
     <topicref href="t_renwealpassport.dita"/>
+    <topicref href="t_account.dita"/>
 </map>
