--- a/Twitter/m_twitter.ditamap
+++ b/Twitter/m_twitter.ditamap
@@ -4,6 +4,7 @@
     <title>Twitter</title>
     <topicref href="c_twitter_introduction.dita"/>
     <topicref href="account_creation.dita"/>
+    <topicref href="t_installation.dita"/>
     <topicref href="t_how_to_tweet.dita"/>
     <topicref href="t_delete_post.dita"/>
     <topicref href="t_update_post.dita" otherprops="prop1"/>
