--- a/Snap/m_snap.ditamap
+++ b/Snap/m_snap.ditamap
@@ -4,5 +4,6 @@
     <title>Snap</title>
     <topicref href="c_introduction.dita"/>
     <topicref href="t_add_a_friend.dita"/>
+    <topicref href="t_installation.dita"/>
     <topicref href="t_location.dita"/>
 </map>
