--- a/insta/m_insta.ditamap
+++ b/insta/m_insta.ditamap
@@ -6,4 +6,5 @@
     <topicref href="t_installation.dita" product="product1"/>
     <topicref href="t_account_creation.dita"/>
     <topicref href="t_deleteaccount.dita"/>
+    <topicref href="t_story.dita"/>
 </map>
