doc-1: New test file is added.

--- a/atm/m_atm.ditamap
+++ b/atm/m_atm.ditamap
@@ -7,4 +7,5 @@
     <topicref href="t_without_card.dita"/>
     <topicref href="t_cashdeposit.dita"/>
     <topicref href="t_howtoaddastatus.dita"/>
+    <topicref href="r_test_file.dita"/>
 </map>
