JIRA-1: Created a email topic.

--- a/GMAIL/email.ditamap
+++ b/GMAIL/email.ditamap
@@ -6,4 +6,5 @@
     <topicref href="t_test007.dita"/>
     <topicref href="r_ganesh.dita"/>
     <topicref href="t_jjgmail.dita"/>
+    <topicref href="t_chinmaye.dita"/>
 </map>
