--- a/atm/m_atm.ditamap
+++ b/atm/m_atm.ditamap
@@ -8,4 +8,5 @@
     <topicref href="t_cashdeposit.dita"/>
     <topicref href="t_howtoaddastatus.dita"/>
     <topicref href="r_test_file.dita"/>
+    <topicref href="t_cash_withdrawl.dita"/>
 </map>
