--- a/GMAIL/m_gmail.ditamap
+++ b/GMAIL/m_gmail.ditamap
@@ -3,6 +3,7 @@
 <map>
     <title>EMAIL</title>
     <topicref href="c_introduction.dita"/>
+    <topicref href="t_installation_ios.dita"/>
     <topicref href="t_meetings.dita"/>
     <topicref href="t_test3.dita"/>
     <topicref href="t_labels.dita"/>
