--- a/insta/m_insta.ditamap
+++ b/insta/m_insta.ditamap
@@ -7,4 +7,5 @@
     <topicref href="t_account_creation.dita"/>
     <topicref href="t_deleteaccount.dita"/>
     <topicref href="t_story.dita"/>
+    <topicref href="t_message.dita"/>
 </map>
