doc20: added short description

--- a/Facebook/t_installation_ios.dita
+++ b/Facebook/t_installation_ios.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA Task//EN" "task.dtd">
 <task id="t_installation_ios">
     <title>Installation IOS</title>
-    <shortdesc></shortdesc>
+    <shortdesc>fsddsfdhfd</shortdesc>
     <taskbody>
         <context>
             <p></p>
