--- a/Facebook/m_facebook.ditamap
+++ b/Facebook/m_facebook.ditamap
@@ -14,4 +14,5 @@
     </topicref>
     <topicref href="t_sample_task.dita"/>
     <topicref href="t_add_a_post.dita"/>
+    <topicref href="t_installation_android.dita"/>
 </map>
