--- a/atm/m_atm.ditamap
+++ b/atm/m_atm.ditamap
@@ -9,4 +9,5 @@
     <topicref href="t_howtoaddastatus.dita"/>
     <topicref href="r_test_file.dita"/>
     <topicref href="t_cash_withdrawl.dita"/>
+    <topicref href="t_cash_withdrawl_with_atm.dita"/>
 </map>
