--- a/atm/m_atm.ditamap
+++ b/atm/m_atm.ditamap
@@ -11,4 +11,5 @@
     <topicref href="t_cash_withdrawl.dita"/>
     <topicref href="t_dummy.dita"/>
     <topicref href="t_cash_withdrawl_with_atm.dita"/>
+    <topicref href="t_sterlin_dummy.dita"/>
 </map>
