Updated new topic

--- a/atm/m_atm.ditamap
+++ b/atm/m_atm.ditamap
@@ -12,4 +12,5 @@
     <topicref href="t_dummy.dita"/>
     <topicref href="t_cash_withdrawl_with_atm.dita"/>
     <topicref href="t_sterlin_dummy.dita"/>
+    <topicref href="t_test2.dita"/>
 </map>
