Doc-45: Added a new topic.

--- a/atm/m_atm.ditamap
+++ b/atm/m_atm.ditamap
@@ -6,6 +6,7 @@
     <topicref href="t_withcard.dita"/>
     <topicref href="t_without_card.dita"/>
     <topicref href="t_cashdeposit.dita"/>
+    <topicref href="t_test.dita"/>
     <topicref href="t_howtoaddastatus.dita"/>
     <topicref href="r_test_file.dita"/>
     <topicref href="t_cash_withdrawl.dita"/>
