--- a/GMAIL/m_gmail.ditamap
+++ b/GMAIL/m_gmail.ditamap
@@ -4,6 +4,7 @@
     <title>EMAIL</title>
     <topicref href="c_introduction.dita"/>
     <topicref href="c_rajesh.dita"/>
+    <topicref href="c_tags.dita"/>
     <topicref href="t_installation_ios.dita"/>
     <topicref href="t_meetings.dita"/>
     <topicref href="t_test3.dita"/>
