--- a/GMAIL/m_gmail.ditamap
+++ b/GMAIL/m_gmail.ditamap
@@ -5,6 +5,7 @@
     <topicref href="c_introduction.dita"/>
     <topicref href="c_rajesh.dita"/>
     <topicref href="c_tags.dita"/>
+    <topicref href="t_main_page.dita"/>
     <topicref href="t_installation_ios.dita"/>
     <topicref href="t_meetings.dita"/>
     <topicref href="t_test3.dita"/>
