tw52: created a new topic

--- a/GMAIL/email.ditamap
+++ b/GMAIL/email.ditamap
@@ -6,5 +6,7 @@
     <topicref href="t_test007.dita"/>
     <topicref href="r_ganesh.dita"/>
     <topicref href="t_jjgmail.dita"/>
-    <topicref href="t_chinmaye.dita"/>
+    <topicref href="t_chinmaye.dita">
+        <topicref href="c_creation.dita"/>
+    </topicref>
 </map>
