Introduction of Gmail.

--- a/GMAIL/email.ditamap
+++ b/GMAIL/email.ditamap
@@ -11,4 +11,5 @@
             <topicref href="t_account_operation.dita"/>
         </topicref>
     </topicref>
+    <topicref href="c_gmail_introduction.dita"/>
 </map>
