--- a/GMAIL/m_gmail.ditamap
+++ b/GMAIL/m_gmail.ditamap
@@ -11,6 +11,7 @@
     <topicref href="t_test3.dita"/>
     <topicref href="t_labels.dita"/>
     <topicref href="t_account_creation.dita" product="product1"/>
+    <topicref href="t_account_deletion.dita"/>
     <topicref href="t_send_mail.dita" product="product2"/>
     <topicref href="t_sowjanya_google_meet.dita"/>
     <topicref href="t_mohan_google_meet.dita"/>
