--- a/Goutam Google account/m_Gmail.ditamap
+++ b/Goutam Google account/m_Gmail.ditamap
@@ -5,4 +5,5 @@
     <topicref href="c_introduction.dita"/>
     <topicref href="t_account_creation.dita"/>
     <topicref href="t_compose_mail.dita"/>
+    <topicref href="t_send_email.dita"/>
 </map>
