--- a/Passport/m_applying_passport.ditamap
+++ b/Passport/m_applying_passport.ditamap
@@ -6,4 +6,5 @@
     <topicref href="t_applying_passport.dita"/>
     <topicref href="t_renwealpassport.dita"/>
     <topicref href="t_account.dita"/>
+    <topicref href="t_existing_user.dita"/>
 </map>
