DOC68: ADD A NEW TOPIC

--- a/GMAIL/m_gmail.ditamap
+++ b/GMAIL/m_gmail.ditamap
@@ -19,4 +19,5 @@
     <topicref href="t_ravi_google_meet.dita"/>
     <topicref href="c_sample.dita"/>
     <topicref href="t_test6.dita"/>
+    <topicref href="girish.dita"/>
 </map>
