TW 68: Document Updated

--- a/david.dita
+++ b/david.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
 <concept id="david">
     <title>David</title>
-    <shortdesc></shortdesc>
+    <shortdesc>This Is about me </shortdesc>
     <conbody>
         <p></p>
     </conbody>
