TW_68: ADDED IMAGE

--- a/david.dita
+++ b/david.dita
@@ -5,5 +5,6 @@
     <shortdesc>This Is about me </shortdesc>
     <conbody>
         <p>its looking nice</p>
+        <p><image href="../Planet9_3840x2160.jpg" id="image_wdq_1ms_kfc"/></p>
     </conbody>
 </concept>
