Tw68 updated document -ATm

--- a/david.dita
+++ b/david.dita
@@ -14,5 +14,8 @@
 &lt;/concept></codeblock>
         </p>
         <p>Today topic is Git Hub.</p>
+        <p>for additional information , see <xref
+                href="https://sbi.co.in/web/personal-banking/digital/atm-services" format="html"
+                scope="external">ATM</xref></p>
     </conbody>
 </concept>
