--- a/GMAIL/m_gmail.ditamap
+++ b/GMAIL/m_gmail.ditamap
@@ -3,6 +3,7 @@
 <map>
     <title>EMAIL</title>
     <topicref href="c_introduction.dita"/>
+    <topicref href="c_akshay.dita"/>
     <topicref href="c_rajesh.dita"/>
     <topicref href="c_tags.dita"/>
     <topicref href="t_main_page.dita"/>
