--- a/m_cover_page.ditamap
+++ b/m_cover_page.ditamap
@@ -2,4 +2,5 @@
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map>
     <title>cover page</title>
+    <topicref href="t_task.dita"/>
 </map>
