DOC53: Added a new topic.

--- a/Facebook/m_facebook.ditamap
+++ b/Facebook/m_facebook.ditamap
@@ -16,4 +16,5 @@
     <topicref href="t_sample_task.dita"/>
     <topicref href="t_add_a_post.dita"/>
     <topicref href="t_installation_android.dita"/>
+    <topicref href="t_dummy_topic.dita"/>
 </map>
