tw72_added_a_new_topic.

--- a/Facebook/m_facebook.ditamap
+++ b/Facebook/m_facebook.ditamap
@@ -8,6 +8,7 @@
     <topicref href="t_test3.dita"/>
     <topicref href="t_test4.dita"/>
     <topicref href="test5.dita"/>
+    <topicref href="t_test_6.dita"/>
     <topicref href="t_account_creation.dita"/>
     <topicref href="t_installation.dita"/>
     <topicref href="t_ios.dita"/>
