--- a/atm/m_atm.ditamap
+++ b/atm/m_atm.ditamap
@@ -9,6 +9,7 @@
     <topicref href="t_test.dita"/>
     <topicref href="t_howtoaddastatus.dita"/>
     <topicref href="r_test_file.dita"/>
+    <topicref href="r_test_file_2.dita"/>
     <topicref href="t_cash_withdrawl.dita"/>
     <topicref href="t_dummy.dita"/>
     <topicref href="t_cash_withdrawl_with_atm.dita"/>
