tw72_test_added_by_sunny

--- a/GMAIL/email.ditamap
+++ b/GMAIL/email.ditamap
@@ -4,6 +4,7 @@
     <title>email</title>
     <topicref href="c_jitendratext.dita"/>
     <topicref href="t_test007.dita"/>
+    <topicref href="t_suntest.dita"/>
     <topicref href="r_ganesh.dita"/>
     <topicref href="t_jjgmail.dita"/>
     <topicref href="t_chinmaye.dita">
