doc_102_to_add_new_file_in_atm_dita_map

--- a/atm/m_atm.ditamap
+++ b/atm/m_atm.ditamap
@@ -11,6 +11,7 @@
     <topicref href="r_test_file.dita"/>
     <topicref href="r_test_file_2.dita"/>
     <topicref href="test_file3.dita"/>
+    <topicref href="t_test_file_4.dita"/>
     <topicref href="t_cash_withdrawl.dita"/>
     <topicref href="t_dummy.dita"/>
     <topicref href="t_cash_withdrawl_with_atm.dita"/>
