--- a/Facebook/m_facebook.ditamap
+++ b/Facebook/m_facebook.ditamap
@@ -9,6 +9,7 @@
     <topicref href="t_test4.dita"/>
     <topicref href="test5.dita"/>
     <topicref href="t_test_6.dita"/>
+    <topicref href="t_test_7.dita"/>
     <topicref href="t_account_creation.dita"/>
     <topicref href="t_installation.dita"/>
     <topicref href="t_ios.dita"/>
