--- a/GMAIL/m_gmail.ditamap
+++ b/GMAIL/m_gmail.ditamap
@@ -10,6 +10,7 @@
     <topicref href="t_installation_ios.dita"/>
     <topicref href="t_meetings.dita"/>
     <topicref href="t_test3.dita"/>
+    <topicref href="t_test2.dita"/>
     <topicref href="t_labels.dita"/>
     <topicref href="t_account_creation.dita" product="product1"/>
     <topicref href="t_account_deletion.dita"/>
