doc 74: Added a new topic

--- a/GMAIL/m_gmail.ditamap
+++ b/GMAIL/m_gmail.ditamap
@@ -21,5 +21,6 @@
     <topicref href="t_ravi_google_meet.dita"/>
     <topicref href="c_sample.dita"/>
     <topicref href="t_test6.dita"/>
+    <topicref href="text7.dita"/>
     <topicref href="girish.dita"/>
 </map>
