--- a/GMAIL/m_gmail.ditamap
+++ b/GMAIL/m_gmail.ditamap
@@ -2,7 +2,9 @@
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map>
     <title>EMAIL</title>
-    <topicref href="c_introduction.dita"/>
+    <topicref href="c_introduction.dita">
+        <topicref href="installation.dita"/>
+    </topicref>
     <topicref href="c_akshay.dita"/>
     <topicref href="c_rajesh.dita"/>
     <topicref href="c_tags.dita"/>
