--- a/GMAIL/email.ditamap
+++ b/GMAIL/email.ditamap
@@ -13,4 +13,5 @@
         </topicref>
     </topicref>
     <topicref href="c_gmail_introduction.dita"/>
+    <topicref href="mail_c.dita"/>
 </map>
