Doc83: we added new topic in gmail

--- a/GMAIL/email.ditamap
+++ b/GMAIL/email.ditamap
@@ -14,4 +14,5 @@
     </topicref>
     <topicref href="c_gmail_introduction.dita"/>
     <topicref href="mail_c.dita"/>
+    <topicref href="hema_gmail_t.dita"/>
 </map>
