Tw6754: I have added a new topic

--- a/GMAIL/m_gmail.ditamap
+++ b/GMAIL/m_gmail.ditamap
@@ -25,4 +25,5 @@
     <topicref href="t_test6.dita"/>
     <topicref href="text7.dita"/>
     <topicref href="girish.dita"/>
+    <topicref href="deepak_c.dita"/>
 </map>
