--- a/GMAIL/m_gmail.ditamap
+++ b/GMAIL/m_gmail.ditamap
@@ -26,4 +26,5 @@
     <topicref href="text7.dita"/>
     <topicref href="girish.dita"/>
     <topicref href="deepak_c.dita"/>
+    <topicref href="deepak_12_t.dita"/>
 </map>
