doc 35 added new files

--- a/GMAIL/m_gmail.ditamap
+++ b/GMAIL/m_gmail.ditamap
@@ -4,6 +4,7 @@
     <title>EMAIL</title>
     <topicref href="c_introduction.dita">
         <topicref href="installation.dita"/>
+        <topicref href="praveen_c.dita"/>
     </topicref>
     <topicref href="neeraj.dita"/>
     <topicref href="c_akshay.dita"/>
