--- a/Facebook/m_facebook.ditamap
+++ b/Facebook/m_facebook.ditamap
@@ -3,7 +3,10 @@
 <map>
     <title>Facebook</title>
     <topicref href="c_introduction.dita"/>
-    <topicref href="../t_Facebook/dummy2.dita"/>
+    <topicref href="../t_Facebook/dummy2.dita">
+        <topicref href="../t_Facebook/praveen_c.dita"/>
+        <topicref href="../t_Facebook/nakshatra_c.dita"/>
+    </topicref>
     <topicref href="t_installation_ios.dita"/>
     <topicref href="t_test3.dita"/>
     <topicref href="t_test4.dita"/>
