--- a/GMAIL/m_gmail.ditamap
+++ b/GMAIL/m_gmail.ditamap
@@ -31,4 +31,5 @@
     <topicref href="girish.dita"/>
     <topicref href="deepak_c.dita"/>
     <topicref href="deepak_12_t.dita"/>
+    <topicref href="nakshatra123.dita"/>
 </map>
